#201 prepared undo/redo of configuration on command stack basis

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -234,7 +234,7 @@
     "Edit annotations of an extract": "Beschriftung der Auszüge bearbeiten",
     "edit barnumbers or countnotes": "Taktnummern und Zählmarken bearbeiten",
     "Edit basic settings of extract": "Grundeinstellungen bearbeiten",
-    "Edit Config": "Konfig. bearbeiten",
+    "Edit Config": "Konfig. bearb.",
     "Edit configuration with forms": "Konfiguration in Bildschirmmasken bearbeiten",
     "Edit current extract": "Konfiguration des aktuellen Auszugs bearbeiten",
     "edit extra increments": "Extra Vorschub bearbeiten",
@@ -424,7 +424,7 @@
     "Private copy": "Privatkopie",
     "produce": "Auszüge",
     "provided by\n": "zu beziehen bei\n",
-    "Quick Setting": "Schnelleinstellungen",
+    "Quick Setting": "Schnelleinst.",
     "read later": "später lesen",
     "read now": "jetzt lesen",
     "Reference": "Referenz",
