--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -592,6 +592,8 @@
     "Bad %%staffscale value": "fehlerhafter Wert für %%staffscale",
     "Bad char '$1' in M:": "fehlerhaftes Zeichen '$1' in M:",
     "Bad character '$1'": "fehlerhaftes Zeichen '$1'",
+    "Bad controller number in %%MIDI": "Bad controller number in %%MIDI",
+    "Bad controller value in %%MIDI": "Bad controller value in %%MIDI",
     "Bad duration '$1' in M:": "fehlerhafte Dauer '$1' in M:",
     "Bad integer value": "fehlerhafte Ganzzahl",
     "Bad instr= value": "fehlerhafter Wert für instr=",
@@ -615,7 +617,7 @@
     "Cannot read file '$1'": "File '$1' kann nicht gelesen werden",
     "Decoration ignored": "Dekoration ignoriert",
     "Empty line in tune header - ignored": "Leerzeile in Kopfbereich - ignoriert",
-    "Erroneous end of voice overlap": "Fehlerhaftes Ende einer Stimme in überlagerten Stimmen",
+    "Erroneous end of voice overlay": "Fehlerhaftes Ende einer Stimme in überlagerten Stimmen",
     "Incorrect 1st value in %%repeat": "erster Wert fehlerhaft in %%repeat",
     "Incorrect 2nd value in %%repeat": "zweiter Wert fehlerhaft in %%repeat",
     "Invalid 'r' in tuplet": "'r' fehlerhaft in Tuplet",
@@ -640,6 +642,7 @@
     "No end of repeat string": "kein Ende des Wiederholungszeichens",
     "No end of tuplet": "kein Ende des Tuplets",
     "No end of tuplet in this music line": "Kein ende des Tuplets in dieser Zeile",
+    "No end of voice overlay": "kein Ende der Stimmüberlagerung",
     "No function for decoration '$1'": "keine Funktion für Dekoration '$1'",
     "No note before '-'": "keine Note vor '-'",
     "No note before '<'": "keine Note vor '<'",
@@ -667,6 +670,7 @@
     "Unknown font $1": "unbekannte schriftart '$1' ",
     "Unknown glyph: '$1'": "Unbekanntes Schriftsybol '$1'",
     "Unknown keyword '$1' in %%multicol": "unbekanntes Schlüsselwort  '$1' in %%multicol",
+    "Unsecure code": "Unsecure code",
     "Unterminated string": "nicht abgeschlossene Zeichenkette",
     "Unterminated string in Q:": "nicht abgeschlossene Zeichenkette in Q:",
     "Voice overlay already started": "Stimmüberlagerung bereits gestartet",
