--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -68,6 +68,8 @@
     "beforeColonN": "beforeColonN",
     "bold": "fettdruck",
     "bottomup": "Spiel aufwärts",
+    "BUG: error while initializing Zupfnoter Controller": "BUG: Fehler beim initialisieren. Bitte informiere Zupfpnoter-Entwicklung",
+    "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
     "c_jumplines": "Sprunglinien",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
@@ -80,6 +82,7 @@
     "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
+    "console": "Konsole",
     "could not find extract with number": "Es gibt keinen Auszug mit nummer",
     "could not open file": "konnte Datei nicht öffnen",
     "countnote": "Zählmarke",
@@ -145,6 +148,7 @@
     "Edit": "Bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
+    "edittemplate": "Vorlage bearbeiten",
     "Effective value": "aktuell wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
     "Empty voice": "Stimme ist leer",
@@ -166,6 +170,7 @@
     "Extract": "Auszug",
     "extract": "Auszug",
     "Extract-Annotation": "Auszugsbeschriftung",
+    "Extras": "Extras",
     "File": "Datei",
     "filebase": "Filename-Basis",
     "Filename not specified in song add an F: instruction": "Kein Filename angegeben. Bitte füge eine F: - Kopfzeile hinzu",
@@ -174,6 +179,8 @@
     "fill": "ausfüllen",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
+    "flowconf edit": "Flusslinien bearbeiten ein",
+    "flowconf off": "Flusslinien bearbeiten aus",
     "Flowline": "Flußlinie",
     "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
@@ -189,6 +196,7 @@
     "grid": "Raster",
     "Harp": "Harfennoten",
     "harpnotes only\napplicable to proofread harpnotes": "Zeige nur Unterlegnoten\ngeeignet zur Kontrolle\ndes gesamten Blattes",
+    "hconfig": "Verlauf der Konfiguration",
     "height": "Bildhöhe",
     "Help": "Hilfe",
     "Homepage": "Homepage",
@@ -235,6 +243,9 @@
     "logged out": "ausgeloggt",
     "Login in dropbox;\nchoose folder in Dropbox": "In Dropbox einloggen;\nOrdner in Dropbox wählen",
     "Login": "Einloggen",
+    "loglevel error": "Loglevel Fehler",
+    "loglevel info": "Loglevel Info",
+    "loglevel warning": "Loglevel Warnung",
     "Logout from Dropbox": "bei Dropbox ausloggen",
     "Logout": "Ausloggen",
     "lyrics": "Liedtexte",
@@ -259,7 +270,9 @@
     "Nested Tuplet": "verschachtelte N-tolen",
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
+    "new": "Neu",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
+    "no filebase given for template. Please type  ": "**--no filebase given for template. Please type  ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
     "no suitable ABC found": "keine passende ABC Eingabe gefunden",
     "nonflowrest": "Begleitpausen",
@@ -295,7 +308,10 @@
     "partname": "Partname",
     "Perspective": "Ansicht",
     "PITCH_OFFSET": "PitchOffset",
+    "play fast": "Wiedergabe schnell",
     "Play music": "Noten wiedergeben",
+    "play normal": "Wiedergabe normal",
+    "play slow": "Wiedergabe langsam",
     "Play": "Play",
     "Please do not copy": "Bitte nicht kopieren",
     "Please double check the generated sheets.\n\nYour abc file was automatically migrated\nto Zupfnoter version": "Bitte prüfe die erzeugten Noten.\n\nDie Eingabedatei wurde automatisch angepasst auf auf\nZupfnoter Version ",
@@ -321,6 +337,7 @@
     "Quick Setting": "Schnelleinst.",
     "read later": "später lesen",
     "read now": "jetzt lesen",
+    "redo": "wiederherstellen",
     "Reference": "Referenz",
     "Refresh": "Refresh",
     "regular": "normal",
@@ -331,7 +348,6 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
-    "resources": "**--resources",
     "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
     "REST_TO_GLYPH": "Pausensymbole",
@@ -344,6 +360,7 @@
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
+    "settemplate": "Vorlage setzen",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
     "shape": "Linienform",
     "Shifter": "links/rechts Verschiebung",
@@ -419,9 +436,12 @@
     "trpos": "oben rechts",
     "Tune": "Noten",
     "tuplet": "Tuplet",
+    "undo": "rückgängig",
     "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
     "unsupported section found in abc file: ": "Zupfnoter-Abschnitt in ABC-File nicht unterstützt: ",
     "url": "URL",
+    "validate off": "Validierung aus",
+    "validate on": "Validierung ein",
     "value": "Wert",
     "Value": "Wert",
     "variantend": "Variantes Ende",
@@ -453,10 +473,6 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
-
-
-
-
     "_ende_der_liste": ""
   }
 }
