see #171 more refinements in menu structure

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -149,6 +149,7 @@
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "edittemplate": "Vorlage bearbeiten",
+    "configtemplate": "Vorlage konfigurieren",
     "Effective value": "aktuell wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
     "Empty voice": "Stimme ist leer",
@@ -360,7 +361,7 @@
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
-    "settemplate": "Vorlage setzen",
+    "settemplate": "Vorlage aktivieren",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
     "shape": "Linienform",
     "Shifter": "links/rechts Verschiebung",
@@ -401,7 +402,7 @@
     "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
     "spos": "Pos. Subleg.",
-    "standardextract": "Standardauszüge (aus Template)",
+    "stdextract": "Standardauszüge aus Vorlage übernehmen",
     "startpos": "Startposition",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
