separate concerns between $conf systemstatus and $settings #169
use a toggle approach for some settings (flowconf, validate, autoscroll, follow)

to merger

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -164,6 +164,7 @@
     "annotations": "Notenbeschriftungsvorlagen",
     "apbase": "autom. pos. Basis",
     "autopos": "autom. pos.",
+    "autoscroll": "zur Selektion scrollen",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
@@ -287,13 +288,13 @@
     "fill": "ausfüllen",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
-    "flowconf edit": "Flusslinien bearbeiten ein",
-    "flowconf off": "Flusslinien bearbeiten aus",
+    "flowconf": "Flusslinien bearbeiten",
     "Flowline": "Flußlinie",
     "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
     "followup distance": "Abstand der Folgelinie",
+    "follow": "Wiederg. folgen",
     "font_size": "Schriftgröße",
     "font_style": "Schriftstil",
     "FONT_STYLE_DEF": "Schriftstildefinition",
@@ -546,8 +547,7 @@
     "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
     "unsupported section found in abc file: ": "Zupfnoter-Abschnitt in ABC-File nicht unterstützt: ",
     "url": "URL",
-    "validate off": "Validierung aus",
-    "validate on": "Validierung ein",
+    "validate": "Validierung",
     "value": "Wert",
     "Value": "Wert",
     "variantend": "Variantes Ende",
