separate concerns between $conf systemstatus and $settings #169
use a toggle approach for some settings (flowconf, validate)

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -180,8 +180,7 @@
     "fill": "ausfüllen",
     "fit to viewport": "in Anzeigebereich\neinpassen",
     "fit": "eingepasst",
-    "flowconf edit": "Flusslinien bearbeiten ein",
-    "flowconf off": "Flusslinien bearbeiten aus",
+    "flowconf": "Flusslinien bearbeiten",
     "Flowline": "Flußlinie",
     "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
@@ -441,8 +440,7 @@
     "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
     "unsupported section found in abc file: ": "Zupfnoter-Abschnitt in ABC-File nicht unterstützt: ",
     "url": "URL",
-    "validate off": "Validierung aus",
-    "validate on": "Validierung ein",
+    "validate": "Validierung",
     "value": "Wert",
     "Value": "Wert",
     "variantend": "Variantes Ende",
