--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -56,6 +56,7 @@
     "annotations": "Notenbeschriftungsvorlagen",
     "apbase": "autom. pos. Basis",
     "autopos": "autom. pos.",
+    "autoscroll": "zur Selektion scrollen",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
@@ -186,6 +187,7 @@
     "flowlines": "Flußlinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
     "followup distance": "Abstand der Folgelinie",
+    "follow": "Wiederg. folgen",
     "font_size": "Schriftgröße",
     "font_style": "Schriftstil",
     "FONT_STYLE_DEF": "Schriftstildefinition",
